[package]
name = "websocket-test"
version = "0.1.0"
authors = ["Yulia Markelova <markelova.y@digdes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# graphql
juniper = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
juniper_actix = { version = "0.2.2", features = ["subscriptions"] }
juniper_graphql_ws = { version = "0.2.2" }
juniper_subscriptions = { git = "https://github.com/graphql-rust/juniper", branch = "master" }


# serialize/deserialize
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"

# other
futures = "0.3.5"
tokio = { version = "0.2" }